--- a/half-term_presentation/half-term_presentation.tex
+++ b/half-term_presentation/half-term_presentation.tex
@@ -294,7 +294,7 @@ build/run ./build/Gaudi/Gaudi/Gaudi_static options.json
         Test: \verb'hlt2_pp_thor' ($6 \times 1000$ events)
         \begin{center}
             \begin{tabular}{ c c c }
-                Optimization & Acceleration & Confidence interval ($2\sigma$) \\
+                Optimization & Improvement & Confidence interval ($2\sigma$) \\
                 LTO & $0.17\%$ & $\pm 1.12\%$ \\
                 LTO \& PGO & $6.74\%$ & $\pm 1.44\%$ \\
                 Static LTO & $0.87\%$ & $\pm 0.60\%$ \\
